--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNuwcqWUE6HJ6mYMrxOoUBq",
+      "authorship_tag": "ABX9TyPFBwNTsz84W1DNkdwHAJaE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4592,12 +4592,12 @@
         "  print(f\"CV {encabezados[i]}: {coefVar.round(2)}\")\n"
       ],
       "metadata": {
-        "id": "RBWOX77RF8BG",
-        "outputId": "4ad74c44-de25-4735-86da-e4b1b80d28c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 547
-        }
+        },
+        "id": "RBWOX77RF8BG",
+        "outputId": "4ad74c44-de25-4735-86da-e4b1b80d28c3"
       },
       "execution_count": 38,
       "outputs": [
@@ -4928,11 +4928,72 @@
       "source": [
         "# 🟡 OJO\n",
         "\n",
-        "#### Si bien existen outliers para las variables bajo estudio, en general, los mismos se encuentran dentro del dominio esperado y no serán ajustados. No obstante, se analizará con mayor detalle el caso de los outliers asociados a los niveles de azufre que están por encima de la cota máxima del boxplot."
+        "#### Si bien existen outliers para las variables bajo estudio, en general, los mismos se encuentran dentro del dominio esperado y no serán ajustados. No obstante, se analizará con mayor detalle el caso de los outliers asociados a los niveles de azufre que están por encima del valor máximo admisible."
       ],
       "metadata": {
         "id": "Lx3Ht2Z1vo66"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "outlierRS_df = df[df['residual sugar'] > 45]\n",
+        "print(\"Cantidad outliers en 'residual sugar': \",outlierRS_df['residual sugar'].count())\n",
+        "#print(outlierRS_df['residual sugar'])\n",
+        "\n",
+        "outlierFSD_df = df[df['free sulfur dioxide'] > 70]\n",
+        "print(\"Cantidad outliers en 'free sulfur dioxide': \",outlierFSD_df['free sulfur dioxide'].count())\n",
+        "#print(outlierFSD_df['free sulfur dioxide'])\n",
+        "\n",
+        "outlierTSD_df = df[df['total sulfur dioxide'] > 350]\n",
+        "print(\"Cantidad outliers en 'total sulfur dioxide': \",outlierTSD_df['total sulfur dioxide'].count())\n",
+        "#print(outlierTSD_df['total sulfur dioxide'])\n",
+        "df.shape\n",
+        ""
+      ],
+      "metadata": {
+        "id": "mEy7dPRYGoY4",
+        "outputId": "9119fa60-96ec-475b-be45-0ab4ff68c83e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cantidad outliers en 'residual sugar':  1\n",
+            "Cantidad outliers en 'free sulfur dioxide':  86\n",
+            "Cantidad outliers en 'total sulfur dioxide':  2\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(5329, 15)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Se borran los outliers\n",
+        "#outliers = df[df['free sulfur dioxide'] > 70] + df[df['residual sugar'] > 45] + df[df['total sulfur dioxide'] > 350]\n",
+        "#df = df.drop(outliers.index)\n",
+        "#df.shape"
+      ],
+      "metadata": {
+        "id": "fsuJadQyG6NJ"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
