--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPFBwNTsz84W1DNkdwHAJaE",
+      "authorship_tag": "ABX9TyNVk9Yvozd1kqRm4ZFiQA+9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4952,11 +4952,11 @@
         ""
       ],
       "metadata": {
-        "id": "mEy7dPRYGoY4",
-        "outputId": "9119fa60-96ec-475b-be45-0ab4ff68c83e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mEy7dPRYGoY4",
+        "outputId": "9119fa60-96ec-475b-be45-0ab4ff68c83e"
       },
       "execution_count": 39,
       "outputs": [
@@ -4998,7 +4998,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **🔹 Análisis de corelación**"
+        "### **🔹 Análisis de corelación**\n",
+        "\n",
+        "#**🟡 Ver si conviene generar correlaciones según tipo de vino**"
       ],
       "metadata": {
         "id": "XJ6LdDjQFRiK"
