--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNLQVzVC7AuYRLjf977uBKQ",
+      "authorship_tag": "ABX9TyOzxsQ3iTd63Q4RYcwOnjnk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -526,9 +526,9 @@
       "source": [
         "### **2️⃣ Data Wrangling**\n",
         "---\n",
-        "El data wrangling es un proceso crucial en el análisis de datos que consiste en limpiar, transformar y estructurar los datos para que sean más utilizables y valiosos. Este proceso es esencial porque los datos en su forma original a menudo están desordenados, incompletos o contienen errores que pueden afectar la calidad del análisis.\n",
+        "El **Data Wrangling** consiste en limpiar, transformar y estructurar los datos para que sean más utilizables y valiosos. Este proceso es esencial porque los datos en su forma original a menudo están desordenados, incompletos o contienen errores que pueden afectar la calidad del análisis.\n",
         "\n",
-        "Como parte de esta etapa se analizarán las varibles del dataset a fin de:\n",
+        "Como parte de esta etapa se procederá a:\n",
         "- Identificar valores duplicados\n",
         "- Identificar valores faltantes\n",
         "- Formatear de datos\n",
@@ -4116,7 +4116,14 @@
       "cell_type": "markdown",
       "source": [
         "### **3️⃣ Análisis Exploratorio de Datos (EDA)**\n",
-        "---\n"
+        "---\n",
+        "Mediante en **Análisis Exploratorio de Datos** se pretende explorar y comprender los datos en detalle a fin de que cualquier análisis posterior sea válido y significativo.\n",
+        "\n",
+        "Como parte de esta etapa se procederá a:\n",
+        "- Identificar patrones y tendencias.\n",
+        "- Detectar valores atípicos o anomalías.\n",
+        "- Comprender las relaciones entre diferentes variables.\n",
+        "- Preparar los datos para su transformación, asegurando que estén en el formato adecuado para el análisis."
       ],
       "metadata": {
         "id": "7t2NIXdE05UY"
@@ -4711,7 +4718,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Muchas de las variables tienen una distribución asimétrica y/o valores extremos que son analizados a continuación."
+        "Muchas de las variables tienen una distribución asimétrica y/o valores extremos que son analizados en el próximo apartado."
       ],
       "metadata": {
         "id": "-V2r-fHl7oT4"
@@ -4723,7 +4730,7 @@
         "Se calcula el coeficiente de variación (CV) a fin de determinar la dispersión de cada variable respecto a la media.\n",
         "Si el CV es <= 30% se dice que los datos son relativamente homogéneos.\n",
         "\n",
-        "<img src=\"https://github.com/eugeinga/CODER-DataScienceII/raw/main/IMG/IMG-Coeficiente%20de%20Variacion.jpg\" alt=\"Coeficiente de Variacion\" width=\"500\"/>"
+        "<img src=\"https://github.com/eugeinga/CODER-DataScienceII/raw/main/IMG/IMG-Coeficiente%20de%20Variacion.jpg\" alt=\"Coeficiente de Variacion\" width=\"400\"/>"
       ],
       "metadata": {
         "id": "QhKS-886thul"
@@ -4738,7 +4745,7 @@
         "\n",
         "for i in range(len(encabezados)):\n",
         "  coefVar = (df[encabezados[i]].std() / df[encabezados[i]].mean()) * 100\n",
-        "  print(f\"CV {encabezados[i]}: {coefVar.round(2)}\")\n"
+        "  print(f\"CV {encabezados[i]}: {coefVar.round(2)}\")"
       ],
       "metadata": {
         "colab": {
