--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO+g0zlF9lIbuxdSPjydJjw",
+      "authorship_tag": "ABX9TyPGxYhQrEJeEHN+tG69x0D3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4826,7 +4826,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **🔹 Identificación de Outliers**\n"
+        "### **🔹 Identificación de Outliers y Distribución de los datos**\n"
       ],
       "metadata": {
         "id": "9cR15dZS9fkr"
@@ -4846,7 +4846,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Para realizar el análisis de normalidad, se emplea un método gráfico. Mediante **boxplots** se analizan de manera gráfica y rápida los valores extremos de cada variable (numérica contínua); mientras que los **histogramas** son una excelente herramienta visual para evaluar la distribución de un conjunto de datos y determinar si se asemeja a una distribución normal (también conocida como distribución gaussiana)."
+        "Para realizar el análisis de normalidad, se emplea un método gráfico. Mediante **boxplots** se analizan de manera gráfica y rápida los valores extremos de cada variable (numérica contínua); mientras que los **histogramas** son una excelente herramienta visual para evaluar la distribución de un conjunto de datos y determinar si se asemeja a una distribución normal (también conocida como distribución gaussiana).\n",
+        "\n",
+        "A fin de profundizar en el análisis, se trabajará tanto con el total del dataset como en el desglose por tipo de vino."
       ],
       "metadata": {
         "id": "MzjGK07mqxPo"
