--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPGxYhQrEJeEHN+tG69x0D3",
+      "authorship_tag": "ABX9TyPKymYqRxHyDgUcOiFch0Vb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5081,6 +5081,35 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Mediante la **Prueba de Shapiro-Wilks** se medir el grado de ajuste existente entre la distribución del conjunto de datos analizados y una distribución normal. El objetivo es validar si los datos provienen de una población que tiene la distribución teórica especificada (contrastando si las observaciones podrían razonablemente proceder de una distribución gaussiana).\n",
+        "\n",
+        "Esta prueba estadística evalúa la hipótesis nula (Ho) que dice que los datos provienen de una distribución normal.\n",
+        "\n",
+        "Entonces, siendo las hipótesis:\n",
+        "- **Ho:** Los datos provienen de una distribución normal.\n",
+        "- **Ha:** Los datos no siguen una distribución normal.\n",
+        "\n",
+        "Se contrasta el nivel de significancia (0,05), tal que:\n",
+        "- si **p-value <= 0,05** se rechaza la hipótesis nula, sugiriendo que la distribución de los datos no es normal.\n",
+        "- si **p-value > 0,05** no se puede rechazar la hipótesis nula, sugiriendo que los datos siguen una distribución normal.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "vLYuCYgtsAPR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "dwjd0MAQr_gp"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
