--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKymYqRxHyDgUcOiFch0Vb",
+      "authorship_tag": "ABX9TyNbmE26m4B8lExUpKb7FT0h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4773,10 +4773,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "🟡 Se calcula el coeficiente de variación (CV) a fin de determinar la dispersión de cada variable respecto a la media.\n",
-        "Si el CV es <= 30% se dice que los datos son relativamente homogéneos.\n",
+        "Se calcula el coeficiente de variación (CV) a fin de determinar la dispersión de cada variable respecto a la media, tal que, si el CV es <= 30% se dice que los datos son relativamente homogéneos.\n",
         "\n",
-        "<img src=\"https://github.com/eugeinga/CODER-DataScienceII/raw/main/IMG/IMG-Coeficiente%20de%20Variacion.jpg\" alt=\"Coeficiente de Variacion\" width=\"400\"/>"
+        "<img src=\"https://github.com/eugeinga/CODER-DataScienceII/raw/main/IMG/IMG-Coeficiente%20de%20Variacion.jpg\" alt=\"Coeficiente de Variacion\" width=\"400\"/>\n",
+        "\n",
+        "Este valor permitirá comparar la dispersión entre diferentes conjuntos de datos, independientemente de sus unidades de medida."
       ],
       "metadata": {
         "id": "QhKS-886thul"
@@ -4826,7 +4827,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **🔹 Identificación de Outliers y Distribución de los datos**\n"
+        "Si bien el coeficiente de variación es útil para entender la dispersión de los datos, éste no proporciona información sobre la forma de la distribución."
+      ],
+      "metadata": {
+        "id": "p-O2xyiMv355"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **🔹 Distribución de los datos e Identificación de Outliers**"
       ],
       "metadata": {
         "id": "9cR15dZS9fkr"
@@ -5085,15 +5095,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Mediante la **Prueba de Shapiro-Wilks** se medir el grado de ajuste existente entre la distribución del conjunto de datos analizados y una distribución normal. El objetivo es validar si los datos provienen de una población que tiene la distribución teórica especificada (contrastando si las observaciones podrían razonablemente proceder de una distribución gaussiana).\n",
+        "Mediante la **Prueba de Shapiro-Wilks** se mide el grado de ajuste existente entre la distribución del conjunto de datos analizados y una distribución normal. El objetivo es validar si los datos provienen de una población tienen la distribución teórica especificada contrastando si las observaciones podrían razonablemente proceder de una distribución gaussiana.\n",
         "\n",
-        "Esta prueba estadística evalúa la hipótesis nula (Ho) que dice que los datos provienen de una distribución normal.\n",
-        "\n",
-        "Entonces, siendo las hipótesis:\n",
+        "Esta prueba estadística contrasta la hipótesis nula con la hipótesis alternativa, siendo:\n",
         "- **Ho:** Los datos provienen de una distribución normal.\n",
         "- **Ha:** Los datos no siguen una distribución normal.\n",
         "\n",
-        "Se contrasta el nivel de significancia (0,05), tal que:\n",
+        "Se evalúa el nivel de significancia (0,05), tal que:\n",
         "- si **p-value <= 0,05** se rechaza la hipótesis nula, sugiriendo que la distribución de los datos no es normal.\n",
         "- si **p-value > 0,05** no se puede rechazar la hipótesis nula, sugiriendo que los datos siguen una distribución normal.\n",
         "\n"
