--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNbmE26m4B8lExUpKb7FT0h",
+      "authorship_tag": "ABX9TyOp1D8eNxjvYFtjZohGmkvM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4836,7 +4836,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **🔹 Distribución de los datos e Identificación de Outliers**"
+        "### **🔹 Distribución de los Datos e Identificación de Outliers**\n"
       ],
       "metadata": {
         "id": "9cR15dZS9fkr"
@@ -4845,9 +4845,22 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Las **pruebas de normalidad**, son pruebas poco potentes cuando el tamaño de la muestra es pequeño. Al basarse en la hipótesis nula de normalidad, podemos no alcanzar significación estadística por falta de potencia estadística, asumiendo erróneamente que los datos siguen una distribución normal (al no poder rechazar la hipótesis nula).\n",
+        "Para realizar este análisis se emplea, en primera instancia, un método gráfico. Mediante **boxplots** se analizan de manera gráfica y rápida los valores extremos de cada variable (numérica contínua); mientras que los **histogramas** son una excelente herramienta visual para evaluar la distribución de un conjunto de datos y determinar si se asemeja a una distribución normal (también conocida como distribución gaussiana).\n",
         "\n",
-        "Por otra parte, cuando la muestra es muy grande, ocurre lo contrario: será suficiente una pequeña desviación de la normalidad para que la prueba nos dé una p significativa y rechacemos la hipótesis nula, cuando la mayor parte de las técnicas paramétricas tolerarían pequeñas desviaciones de la normalidad si la muestra es grande."
+        "Luego, para completar el análisis gráfico de normalidad se realiza un test estadístico de **Shapiro-Wilks**."
+      ],
+      "metadata": {
+        "id": "XEmIEO7uyJnS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### **Pruebas de Normalidad**\n",
+        "Las **Pruebas de Normalidad** son esenciales para validar la aplicabilidad de muchos métodos estadísticos y asegurar la precisión de los resultados obtenidos.\n",
+        "\n",
+        "Se trata de herramientas estadísticas utilizadas para determinar si un conjunto de datos sigue una distribución normal. La normalidad es un supuesto clave en muchos análisis estadísticos, ya que permite aplicar técnicas como pruebas de hipótesis, intervalos de confianza y modelos de regresión que dependen de esta distribución. Si los datos no son normales, puede ser necesario utilizar métodos no paramétricos que no requieren este supuesto.\n",
+        "\n"
       ],
       "metadata": {
         "id": "C3WhZUXRqYoE"
@@ -4856,8 +4869,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Para realizar el análisis de normalidad, se emplea un método gráfico. Mediante **boxplots** se analizan de manera gráfica y rápida los valores extremos de cada variable (numérica contínua); mientras que los **histogramas** son una excelente herramienta visual para evaluar la distribución de un conjunto de datos y determinar si se asemeja a una distribución normal (también conocida como distribución gaussiana).\n",
-        "\n",
         "A fin de profundizar en el análisis, se trabajará tanto con el total del dataset como en el desglose por tipo de vino."
       ],
       "metadata": {
@@ -5103,11 +5114,29 @@
         "\n",
         "Se evalúa el nivel de significancia (0,05), tal que:\n",
         "- si **p-value <= 0,05** se rechaza la hipótesis nula, sugiriendo que la distribución de los datos no es normal.\n",
-        "- si **p-value > 0,05** no se puede rechazar la hipótesis nula, sugiriendo que los datos siguen una distribución normal.\n",
-        "\n"
+        "- si **p-value > 0,05** no se puede rechazar la hipótesis nula, sugiriendo que los datos siguen una distribución normal."
       ],
       "metadata": {
         "id": "vLYuCYgtsAPR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "--------\n",
+        "##### **NOTA:** Este método es adecuado para muestras pequeñas y medianas. Las **pruebas de normalidad**, son pruebas poco potentes cuando el tamaño de la muestra es pequeño (n <= 30). Al basarse en la hipótesis nula de normalidad, podemos no alcanzar significación estadística por falta de potencia estadística, asumiendo erróneamente que los datos siguen una distribución normal (al no poder rechazar la hipótesis nula). Por otra parte, cuando la muestra es muy grande (n > 30), ocurre lo contrario: será suficiente una pequeña desviación de la normalidad para que la prueba nos dé una p significativa y rechacemos la hipótesis nula, cuando la mayor parte de las técnicas paramétricas tolerarían pequeñas desviaciones de la normalidad si la muestra es grande. Aunque, para estos casos aplica el ***Teorema Central del Límite*** que indica que cuando se extraen muestras de tamaño mayor a 30, la distribución muestral de medias tiene un comportamiento aproximadamente normal."
+      ],
+      "metadata": {
+        "id": "xVjsBffO3mYP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### **Análisis de Outliers**"
+      ],
+      "metadata": {
+        "id": "QUJpJqmGysfs"
       }
     },
     {
