--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOp1D8eNxjvYFtjZohGmkvM",
+      "authorship_tag": "ABX9TyPAMpscdva9ZvptHhxn/Rye",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -150,7 +150,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 223
         },
         "id": "w0ux86UfDkJD",
         "outputId": "08113eae-66cc-47be-87bf-4d1ae34b86fd"
@@ -1085,7 +1085,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 862
+          "height": 558
         },
         "id": "MgXKUH8bZWsJ",
         "outputId": "c3077783-97ae-4ea6-89c3-a6c074c6135e"
@@ -1123,7 +1123,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 488
+          "height": 505
         },
         "id": "3SSmPIEqcFo4",
         "outputId": "f1ad5a61-5c73-4f62-81d1-e2edd016e691"
@@ -1797,7 +1797,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 492
+          "height": 491
         },
         "id": "8TO2zxDHnzAX",
         "outputId": "44958010-406e-4f8e-8105-19bfceeac069"
@@ -2868,7 +2868,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 175
+          "height": 174
         },
         "id": "zMzZhYHzcCiM",
         "outputId": "bd60b2a5-330f-4f03-9d47-51135f4be654"
@@ -3583,7 +3583,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 175
+          "height": 174
         },
         "id": "PKVVI67RovX9",
         "outputId": "f47259f5-0d94-4095-d05c-7d6252d7448f"
@@ -4150,7 +4150,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 300
+          "height": 335
         },
         "id": "h6dovbVwQeT5",
         "outputId": "4b8e185a-6a0f-4d0a-ec31-cee96379fc6f"
@@ -4748,7 +4748,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 105
+          "height": 157
         },
         "id": "-biDo45QmMb8",
         "outputId": "4cc9c738-02f3-476f-cb09-dbc2a3f75285"
@@ -4895,7 +4895,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 87
+          "height": 122
         },
         "id": "mqikp92cQqln",
         "outputId": "545dc947-a1e1-49dc-cbf5-7b550ffbe9ea"
@@ -4940,7 +4940,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 105
+          "height": 157
         },
         "id": "7m91ejFVFXlW",
         "outputId": "5f28503d-4c30-4d12-e13a-e1a48f75ec79"
@@ -5129,6 +5129,50 @@
       "metadata": {
         "id": "xVjsBffO3mYP"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from scipy.stats import shapiro\n",
+        "\n",
+        "#La variable density parece a simple vista ser normal, vamos a verificar esto con un  test estadístico\n",
+        "# Realizar el test  en density\n",
+        "# Se asume la distribución normal estándar como distribución de referencia\n",
+        "\n",
+        "# Separo los dataframes por tipo de vino\n",
+        "df_white = df.loc[df['type'] == 1]\n",
+        "df_red = df.loc[df['type'] == 0]\n",
+        "\n",
+        "diccionario = {'fixed acidity':1, 'chlorides':1, 'density':0, 'ph':0}\n",
+        "\n",
+        "# Test de Shapiro\n",
+        "for clave, valor in diccionario.items():\n",
+        "  shapiro_test = shapiro(df_red[\"density\"])\n",
+        "  shapiro_pvalue = shapiro_test.pvalue\n",
+        "  distribucion = lambda shapiro_pvalue: 'es Normal' if shapiro_pvalue > 0.05 else 'NO es Normal'\n",
+        "  resultado = distribucion(shapiro_pvalue)\n",
+        "  print(f'p-value de {clave} (para type={valor}): {shapiro_pvalue}, la distribución {resultado}.')\n"
+      ],
+      "metadata": {
+        "id": "-Cf2HyWB7IlA",
+        "outputId": "1f3f2731-713f-4094-96cc-d566f91758d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "p-value de fixed acidity (para type=1): 1.8043209191584517e-06, la distribución NO es Normal.\n",
+            "p-value de chlorides (para type=1): 1.8043209191584517e-06, la distribución NO es Normal.\n",
+            "p-value de density (para type=0): 1.8043209191584517e-06, la distribución NO es Normal.\n",
+            "p-value de ph (para type=0): 1.8043209191584517e-06, la distribución NO es Normal.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
