--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO3jY/T+yJRHBCfD2xdesKA",
+      "authorship_tag": "ABX9TyOp/XxqSwPXqftazws2eY97",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4838,7 +4838,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **🔹 Distribución de los Datos e Identificación de Outliers**\n"
+        "### **🔹 Análisis de Distribución de los Datos**\n"
       ],
       "metadata": {
         "id": "9cR15dZS9fkr"
@@ -4847,18 +4847,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Para realizar este análisis se emplea, en primera instancia, un método gráfico. Mediante **boxplots** se analizan de manera gráfica y rápida los valores extremos de cada variable (numérica contínua); mientras que los **histogramas** son una excelente herramienta visual para evaluar la distribución de un conjunto de datos y determinar si se asemeja a una distribución normal (también conocida como distribución gaussiana).\n",
-        "\n",
-        "Luego, para completar el análisis gráfico de normalidad se realiza un test estadístico de **Shapiro-Wilks**."
-      ],
-      "metadata": {
-        "id": "XEmIEO7uyJnS"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### **Pruebas de Normalidad**\n",
         "Las **Pruebas de Normalidad** son esenciales para validar la aplicabilidad de muchos métodos estadísticos y asegurar la precisión de los resultados obtenidos.\n",
         "\n",
         "Se trata de herramientas estadísticas utilizadas para determinar si un conjunto de datos sigue una distribución normal. La normalidad es un supuesto clave en muchos análisis estadísticos, ya que permite aplicar técnicas como pruebas de hipótesis, intervalos de confianza y modelos de regresión que dependen de esta distribución. Si los datos no son normales, puede ser necesario utilizar métodos no paramétricos que no requieren este supuesto.\n",
@@ -4871,7 +4859,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "A fin de profundizar en el análisis, se trabajará tanto con el total del dataset como en el desglose por tipo de vino."
+        "Los **histogramas** son una excelente herramienta visual para evaluar la distribución de un conjunto de datos y determinar si se asemeja a una distribución normal (también conocida como distribución gaussiana).\n",
+        "\n",
+        "Luego, para completar el análisis gráfico de normalidad se realiza un test estadístico de **Shapiro-Wilks** y **QQ-Plots**."
       ],
       "metadata": {
         "id": "MzjGK07mqxPo"
@@ -4980,12 +4970,12 @@
         "    plt.show()"
       ],
       "metadata": {
-        "id": "M7gOkjGC71s_",
-        "outputId": "a2638df0-25d8-4717-d9c3-91b839c72e69",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "M7gOkjGC71s_",
+        "outputId": "a2638df0-25d8-4717-d9c3-91b839c72e69"
       },
       "execution_count": 73,
       "outputs": [
@@ -5327,7 +5317,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Del análisis de QQ-Plots se concluye que:\n",
+        "- La variable **\"fixed acidity\"** para los vinos blancos no sigue una distribución normal dado que la cola superior (extremo) del gráfico se desvía significativamente de la línea recta.\n",
+        "- La variable **\"chlorides\"** para los vinos blancos no sigue la línea recta diagonal de la distribución normal.\n",
+        "- Las variables **\"density\"** y **\"pH\"** para los vinos tintos se aproximan a la distribución normal (aunque los puntos extremos del gráfico se desvían levemente de la línea recta diagonal)."
+      ],
       "metadata": {
         "id": "t7lVIm_m5X8w"
       }
@@ -5335,10 +5330,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### **Análisis de Outliers**"
+        "### **🔹 Identificación de Outliers**"
       ],
       "metadata": {
         "id": "QUJpJqmGysfs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Mediante **boxplots** se analizan de manera gráfica y rápida los valores extremos de cada variable (numérica contínua)."
+      ],
+      "metadata": {
+        "id": "wuk8c-mmCiDB"
       }
     },
     {
