--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQoKWk7qpjqBsTrGkrdTB4",
+      "authorship_tag": "ABX9TyPbEQ1Ey3YrwHASRn3cHOQE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5869,6 +5869,17 @@
           "execution_count": 128
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Considerando que los datos que tienen una distribución normal, donde la media +/- 3*DS (Desviaciiones estándar) captura el 99,7 % de las observaciones, se analizan las variables que se aproximan a la normal (según el análisis del apartado anterior).\n",
+        "\n",
+        "De esta manera, cualquier valor que quede fuera del rango mencionado se considerarán una anomalía."
+      ],
+      "metadata": {
+        "id": "A6NeTP7eJb6O"
+      }
     },
     {
       "cell_type": "code",
