--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO63xpxUjQ9aKcXZbqNBOoT",
+      "authorship_tag": "ABX9TyPlwZafFioNRqOpTCvD25MH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5835,6 +5835,31 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# se calcula la proporción de valores atípicos respecto al total del dataset bajo estudio.\n",
+        "porcAtipicos = len(df_filtered) / len(df)\n",
+        "print(f\"Los valores atípicos identificados representan el {porcAtipicos:.2f} % del dataset\")"
+      ],
+      "metadata": {
+        "id": "UXsaOVKrilKE",
+        "outputId": "aa2bf5e2-0407-4847-c5c4-051aa043e261",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 137,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Los valores atípicos identificados representan el 0.06 % del dataset\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "Dado que la cantidad de registros identificados no es significativa se procede a eliminarlos del conjunto de datos"
@@ -5909,12 +5934,12 @@
         "totalOutliers"
       ],
       "metadata": {
-        "id": "8aFvtvgYLP9r",
-        "outputId": "2d335588-5cb0-4f1c-b3b3-7165ee103219",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 125
-        }
+        },
+        "id": "8aFvtvgYLP9r",
+        "outputId": "2d335588-5cb0-4f1c-b3b3-7165ee103219"
       },
       "execution_count": 130,
       "outputs": [
